Revert "Initial commit"
This reverts commit 91a7ac64ce1577e15a8de5852826355c8c354734.